# hologram_open3d

./: CMakeLists.txt  README.md  gitignore.txt  main_voxel_cylinder.cpp
src/: main.cpp  main_cylinder.cpp  main_voxel_model_cartesian.cpp  main_voxel_model_cylinder.cpp
